fix dropbar dropdown alignment if boundary-align is true

--- a/src/less/components/navbar.less
+++ b/src/less/components/navbar.less
@@ -394,7 +394,6 @@
  * 1. Set position
  * 2. Bottom padding for dropbar
  * 3. Horizontal padding
- * 4. Reset padding if aligned to boundary
  */
 
 .uk-navbar-dropdown-dropbar {
@@ -408,10 +407,9 @@
     .hook-navbar-dropdown-dropbar();
 }
 
-/* 4 */
+
 .uk-navbar-dropdown-dropbar.uk-navbar-dropdown-boundary {
-    padding-left: 0;
-    padding-right: 0;
+
 }
 
 
